added sprite images

--- a/FFV-jobRandom/FFV-jobRandom.csproj
+++ b/FFV-jobRandom/FFV-jobRandom.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WhatCharacters.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,8 +78,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Sprites\" />
+    <Content Include="Resources\bartz.png" />
+    <Content Include="Resources\faris.png" />
+    <Content Include="Resources\galuf.png" />
+    <Content Include="Resources\krile.png" />
+    <Content Include="Resources\lenna.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
